2005-02-15  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/jabw.py:
	Added unicode conversion.

2005-02-10  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/debug.py:
	* src/main.py:
	* src/config.py:
	Added extended debugging support.

2005-02-04  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/disco.py:
	Imported part of Florian's version patch.

2005-02-03  Daniel Henninger  <jadestorm@nc.rr.com>

	* PyICQt:
	Changed to /bin/sh.
	Then changed to /usr/bin/env.

	* src/config.py:
	* src/legacy/icqt.py:
	* config_example.xml:
	Added icqServer and icqPort config setting.

2005-02-02  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	* src/legacy/icqt.py:
	* src/tlib/oscar.py:
	Added Jonas's SSI patches.

2005-01-18  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/config.py:
	* config_example.xml:
	Added encoding which vanished on me for some reason.

	* src/tlib/oscar.py:
	Check for seqnum existance.

	* src/legacy/icqt.py:
	Added more checks for "bos".
	Fixed lack of readiness check.

	* src/lang.py:
	* src/session.py:
	* src/register.py:
	* src/utils.py:
	* src/misciq.py:
	* src/main.py:
	* src/groupchat.py:
	Changed case of lang strings.

2005-01-14  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/webadmin/handler.py:
	Added authentication support thanks to one of the folk in twisted.web.
	Switched shut down button to form-driven and to not generate errors.

2005-01-11  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	* src/tlib/oscar.py:
	Added support for status indicators. (web aware, that sort of thing)

2005-01-10  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	Added check for existance of nevow.

	* src/lang.py:
	Added spanish and swedish.

2005-01-09  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	* src/xmlconfig.py:
	* src/config.py:
	* src/config_example.py:
	Updated to new config style.

	* config_example.xml:
	Added example new configuration file.

	* PyICQt:
	Altered to pass on args.
